cnd.highlight/test/unit/data/org/netbeans/modules/cnd/highlight/error/UnresolvedIdentifierTest/bug222883.cpp
int bug222883_main(int argc, char *argv[]) {
    int i = 0;
    try {
        G_1:
        i++;
        goto G_1;
    } catch (...) {
    }
    return 0;
}